build/log/idf_py_stdout_output_17989
[1/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj 
/home/gzlg/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../main -I/home/gzlg/esp32/esp-idf/components/newlib/platform_include -I/home/gzlg/esp32/esp-idf/components/freertos/config/include -I/home/gzlg/esp32/esp-idf/components/freertos/config/include/freertos -I/home/gzlg/esp32/esp-idf/components/freertos/config/xtensa/include -I/home/gzlg/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/gzlg/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/gzlg/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/gzlg/esp32/esp-idf/components/freertos/esp_additions/include -I/home/gzlg/esp32/esp-idf/components/esp_hw_support/include -I/home/gzlg/esp32/esp-idf/components/esp_hw_support/include/soc -I/home/gzlg/esp32/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/gzlg/esp32/esp-idf/components/esp_hw_support/dma/include -I/home/gzlg/esp32/esp-idf/components/esp_hw_support/ldo/include -I/home/gzlg/esp32/esp-idf/components/esp_hw_support/debug_probe/include -I/home/gzlg/esp32/esp-idf/components/esp_hw_support/port/esp32/. -I/home/gzlg/esp32/esp-idf/components/esp_hw_support/port/esp32/include -I/home/gzlg/esp32/esp-idf/components/heap/include -I/home/gzlg/esp32/esp-idf/components/heap/tlsf -I/home/gzlg/esp32/esp-idf/components/log/include -I/home/gzlg/esp32/esp-idf/components/soc/include -I/home/gzlg/esp32/esp-idf/components/soc/esp32 -I/home/gzlg/esp32/esp-idf/components/soc/esp32/include -I/home/gzlg/esp32/esp-idf/components/soc/esp32/register -I/home/gzlg/esp32/esp-idf/components/hal/platform_port/include -I/home/gzlg/esp32/esp-idf/components/hal/esp32/include -I/home/gzlg/esp32/esp-idf/components/hal/include -I/home/gzlg/esp32/esp-idf/components/esp_rom/include -I/home/gzlg/esp32/esp-idf/components/esp_rom/esp32/include -I/home/gzlg/esp32/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/gzlg/esp32/esp-idf/components/esp_rom/esp32 -I/home/gzlg/esp32/esp-idf/components/esp_common/include -I/home/gzlg/esp32/esp-idf/components/esp_system/include -I/home/gzlg/esp32/esp-idf/components/esp_system/port/soc -I/home/gzlg/esp32/esp-idf/components/esp_system/port/include/private -I/home/gzlg/esp32/esp-idf/components/xtensa/esp32/include -I/home/gzlg/esp32/esp-idf/components/xtensa/include -I/home/gzlg/esp32/esp-idf/components/xtensa/deprecated_include -I/home/gzlg/esp32/esp-idf/components/lwip/include -I/home/gzlg/esp32/esp-idf/components/lwip/include/apps -I/home/gzlg/esp32/esp-idf/components/lwip/include/apps/sntp -I/home/gzlg/esp32/esp-idf/components/lwip/lwip/src/include -I/home/gzlg/esp32/esp-idf/components/lwip/port/include -I/home/gzlg/esp32/esp-idf/components/lwip/port/freertos/include -I/home/gzlg/esp32/esp-idf/components/lwip/port/esp32xx/include -I/home/gzlg/esp32/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/gzlg/esp32/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/gzlg/esp32/esp-idf/components/driver/deprecated -I/home/gzlg/esp32/esp-idf/components/driver/i2c/include -I/home/gzlg/esp32/esp-idf/components/driver/touch_sensor/include -I/home/gzlg/esp32/esp-idf/components/driver/twai/include -I/home/gzlg/esp32/esp-idf/components/driver/touch_sensor/esp32/include -I/home/gzlg/esp32/esp-idf/components/esp_pm/include -I/home/gzlg/esp32/esp-idf/components/esp_ringbuf/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_gpio/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_pcnt/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_gptimer/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_spi/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_mcpwm/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_ana_cmpr/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_i2s/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_sdmmc/include -I/home/gzlg/esp32/esp-idf/components/sdmmc/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_sdspi/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_sdio/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_dac/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_rmt/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_tsens/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_sdm/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_i2c/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_uart/include -I/home/gzlg/esp32/esp-idf/components/vfs/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_ledc/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_parlio/include -I/home/gzlg/esp32/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/gzlg/esp32/esp-idf/components/spi_flash/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy   -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/gzlg/esp32/hello_world=. -fmacro-prefix-map=/home/gzlg/esp32/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj   -c ../main/hello_world_main.c
../main/hello_world_main.c: In function 'app_main':
../main/hello_world_main.c:98:54: error: expected ')' before ';' token
   98 |             gpio_set_level(GPIO_OUTPUT_IO_1, cnt % 2);
      |                                                      ^
      |                                                      )
../main/hello_world_main.c:97:13: note: to match this '('
   97 |         else(
      |             ^
../main/hello_world_main.c:99:10: error: expected ';' before 'if'
   99 |         )
      |          ^
      |          ;
  100 | 
  101 |         if(key1) delay_num += 100;
      |         ~~
[2/10] Performing build step for 'bootloader'
[1/1] cd /home/gzlg/esp32/hello_world/build/bootloader/esp-idf/esptool_py && /home/gzlg/.espressif/python_env/idf5.4_py3.8_env/bin/python /home/gzlg/esp32/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/gzlg/esp32/hello_world/build/bootloader/bootloader.bin
Bootloader binary size 0x6b70 bytes. 0x490 bytes (4%) free.
ninja: build stopped: subcommand failed.
